esw: common CMakeLists.txt for both yocto and non yocto flows
Signed-off-by: Appana Durga Kedareswara rao <appana.durga.kedareswara.rao@amd.com>

--- a/XilinxProcessorIPLib/drivers/sysmonpsv/src/CMakeLists.txt
+++ b/XilinxProcessorIPLib/drivers/sysmonpsv/src/CMakeLists.txt
@@ -1,9 +1,9 @@
 # Copyright (c) 2021 Xilinx, Inc.  All rights reserved.
 # SPDX-License-Identifier: MIT
 cmake_minimum_required(VERSION 3.15)
-#include(${CMAKE_CURRENT_SOURCE_DIR}/../../../../cmake/common.cmake NO_POLICY_SCOPE)
 project(sysmonpsv)
 
+find_package(common)
 set(SYSMONPSV_DIR "${CMAKE_CURRENT_SOURCE_DIR}")
 find_package(SYSMONPSV)
 list(APPEND defs "#ifndef XSYSMONPSV_SUPPLYLIST\n")
@@ -53,8 +53,5 @@ add_subdirectory(services)
 collector_list (_sources PROJECT_LIB_SOURCES)
 collector_list (_headers PROJECT_LIB_HEADERS)
 file(COPY ${_headers} DESTINATION ${CMAKE_BINARY_DIR}/include)
-if (NOT ${OS_ESW})
 add_library(sysmonpsv STATIC ${_sources})
 set_target_properties(sysmonpsv PROPERTIES LINKER_LANGUAGE C)
-install(TARGETS sysmonpsv LIBRARY DESTINATION ${CMAKE_SOURCE_DIR}/build ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})
-endif()
