--- a/XilinxProcessorIPLib/drivers/uartpsv/src/CMakeLists.txt
+++ b/XilinxProcessorIPLib/drivers/uartpsv/src/CMakeLists.txt
@@ -1,9 +1,9 @@
 # Copyright (c) 2021 Xilinx, Inc.  All rights reserved.
 # SPDX-License-Identifier: MIT
 cmake_minimum_required(VERSION 3.15)
-#include(${CMAKE_CURRENT_SOURCE_DIR}/../../../../cmake/common.cmake NO_POLICY_SCOPE)
 project(uartpsv)
 
+find_package(common)
 set(UARTPSV_DIR "${CMAKE_CURRENT_SOURCE_DIR}")
 find_package(UARTPSV)
 list(APPEND defs "#ifndef XUARTPSV_CONFIG_H_\n")
@@ -36,8 +36,5 @@ collect (PROJECT_LIB_HEADERS xuartpsv_xfer.h)
 collector_list (_sources PROJECT_LIB_SOURCES)
 collector_list (_headers PROJECT_LIB_HEADERS)
 file(COPY ${_headers} DESTINATION ${CMAKE_BINARY_DIR}/include)
-if (NOT ${OS_ESW})
 add_library(uartpsv STATIC ${_sources})
 set_target_properties(uartpsv PROPERTIES LINKER_LANGUAGE C)
-install(TARGETS uartpsv LIBRARY DESTINATION ${CMAKE_SOURCE_DIR}/build ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})
-endif()
