--- a/lib/bsp/standalone/src/CMakeLists.txt
+++ b/lib/bsp/standalone/src/CMakeLists.txt
@@ -71,13 +71,16 @@ endif()
 else()
 add_library(xilstandalone STATIC ${_sources})
 endif()
-if (${OS_ESW}
+if (${NON_YOCTO}
     AND ("${CMAKE_SYSTEM_NAME}" STREQUAL "FreeRTOS"))
     target_compile_definitions(xilstandalone PRIVATE FREERTOS_BSP)
+    file(COPY ${CMAKE_SOURCE_DIR}/common.cmake DESTINATION ${CMAKE_INCLUDE_PATH}/../../)
+    file(RENAME ${CMAKE_INCLUDE_PATH}/../../common.cmake ${CMAKE_INCLUDE_PATH}/../../Findcommon.cmake)
+else()
+    file(COPY ${CMAKE_SOURCE_DIR}/common.cmake DESTINATION ${CMAKE_MODULE_PATH}/)
+    file(RENAME ${CMAKE_MODULE_PATH}/common.cmake ${CMAKE_MODULE_PATH}/Findcommon.cmake)
 endif()
 set_target_properties(xilstandalone PROPERTIES LINKER_LANGUAGE C)
-file(COPY ${CMAKE_SOURCE_DIR}/common.cmake DESTINATION ${CMAKE_INCLUDE_PATH}/../../)
-file(RENAME ${CMAKE_INCLUDE_PATH}/../../common.cmake ${CMAKE_INCLUDE_PATH}/../../Findcommon.cmake)
 
 install(TARGETS xilstandalone LIBRARY DESTINATION ${CMAKE_LIBRARY_PATH} ARCHIVE DESTINATION ${CMAKE_LIBRARY_PATH})
 install(DIRECTORY ${CMAKE_BINARY_DIR}/include DESTINATION ${CMAKE_INCLUDE_PATH}/..) 
