--- a/lib/sw_apps/freertos_lwip_echo_server/src/CMakeLists.txt
+++ b/lib/sw_apps/freertos_lwip_echo_server/src/CMakeLists.txt
@@ -21,7 +21,7 @@ linker_gen("${CMAKE_SOURCE_DIR}/linker_files/")
 add_executable(freertos_lwip_echo_server.elf ${SOURCES})
 target_link_libraries(freertos_lwip_echo_server.elf -Wl,--gc-sections -T\"${CMAKE_SOURCE_DIR}/lscript.ld\" -L\"${CMAKE_SOURCE_DIR}/\" -Wl,--start-group ${_deps} -Wl,--end-group)
 target_include_directories(freertos_lwip_echo_server.elf PUBLIC "${CMAKE_BINARY_DIR}/include")
-if (${OS_ESW})
+if (${NON_YOCTO})
    set (INCLUDE_DIRS
        "${CMAKE_INCLUDE_PATH}/include/"
        "${CMAKE_BINARY_DIR}/include")
