--- a/lib/sw_apps/versal_plm/src/CMakeLists.txt
+++ b/lib/sw_apps/versal_plm/src/CMakeLists.txt
@@ -11,7 +11,7 @@ collect(PROJECT_LIB_DEPS xilstandalone)
 collect(PROJECT_LIB_DEPS xil)
 collect(PROJECT_LIB_DEPS xiltimer)
 collect(PROJECT_LIB_DEPS xilsecure)
-if (${OS_ESW})
+if (${NON_YOCTO})
     collect(PROJECT_LIB_DEPS xilsecure_pmc)
 endif()
 collect(PROJECT_LIB_DEPS xilffs)
