--- a/lib/sw_services/xilsecure/src/versal/server/CMakeLists.txt
+++ b/lib/sw_services/xilsecure/src/versal/server/CMakeLists.txt
@@ -54,7 +54,7 @@ if ("${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "cortexr5")
 	execute_process(COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/libxilsecure_r5.a ${CMAKE_BINARY_DIR}/libxilsecure.a)
 endif()
 
-if (${OS_ESW})
+if (${NON_YOCTO})
     execute_process(COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/libxilsecure_pmc.a ${CMAKE_BINARY_DIR}/libxilsecure_pmc.a)
     #execute_process(COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_BINARY_DIR}/libxilsecure_pmc.a) ${CMAKE_LIBRARY_PATH}/libxilsecure_pmc.a)
     file(COPY ${CMAKE_BINARY_DIR}/libxilsecure_pmc.a DESTINATION ${CMAKE_LIBRARY_PATH} FOLLOW_SYMLINK_CHAIN)
