--- a/XilinxProcessorIPLib/drivers/axivdma/src/CMakeLists.txt
+++ b/XilinxProcessorIPLib/drivers/axivdma/src/CMakeLists.txt
@@ -1,9 +1,9 @@
 # Copyright (c) 2021 Xilinx, Inc.  All rights reserved.
 # SPDX-License-Identifier: MIT
 cmake_minimum_required(VERSION 2.8.9)
-#include(${CMAKE_CURRENT_SOURCE_DIR}/../../../../cmake/common.cmake NO_POLICY_SCOPE)
 project(axivdma)
 
+find_package(common)
 collector_create (PROJECT_LIB_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}")
 collector_create (PROJECT_LIB_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}")
 include_directories(${CMAKE_BINARY_DIR}/include)
@@ -20,8 +20,5 @@ collect (PROJECT_LIB_SOURCES xaxivdma_sinit.c)
 collector_list (_sources PROJECT_LIB_SOURCES)
 collector_list (_headers PROJECT_LIB_HEADERS)
 file(COPY ${_headers} DESTINATION ${CMAKE_BINARY_DIR}/include)
-if (NOT ${OS_ESW})
 add_library(axivdma STATIC ${_sources})
 set_target_properties(axivdma PROPERTIES LINKER_LANGUAGE C)
-install(TARGETS axivdma LIBRARY DESTINATION ${CMAKE_SOURCE_DIR}/build ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})
-endif()
