--- a/XilinxProcessorIPLib/drivers/csudma/src/CMakeLists.txt
+++ b/XilinxProcessorIPLib/drivers/csudma/src/CMakeLists.txt
@@ -3,6 +3,7 @@
 cmake_minimum_required(VERSION 3.15)
 project(csudma)
 
+find_package(common)
 collector_create (PROJECT_LIB_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}")
 collector_create (PROJECT_LIB_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}")
 include_directories(${CMAKE_BINARY_DIR}/include)
@@ -17,8 +18,5 @@ collect (PROJECT_LIB_SOURCES xcsudma_intr.c)
 collector_list (_sources PROJECT_LIB_SOURCES)
 collector_list (_headers PROJECT_LIB_HEADERS)
 file(COPY ${_headers} DESTINATION ${CMAKE_BINARY_DIR}/include)
-if (NOT ${OS_ESW})
 add_library(csudma STATIC ${_sources})
 set_target_properties(csudma PROPERTIES LINKER_LANGUAGE C)
-install(TARGETS csudma LIBRARY DESTINATION ${CMAKE_SOURCE_DIR}/build ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})
-endif()
