--- a/lib/sw_apps/lwip_echo_server/src/CMakeLists.txt
+++ b/lib/sw_apps/lwip_echo_server/src/CMakeLists.txt
@@ -20,7 +20,7 @@ linker_gen("${CMAKE_CURRENT_SOURCE_DIR}/linker_files/")
 add_executable(lwip_echo_server.elf ${SOURCES})
 target_link_libraries(lwip_echo_server.elf -Wl,--gc-sections -T\"${CMAKE_SOURCE_DIR}/lscript.ld\" -L\"${CMAKE_SOURCE_DIR}/\" -Wl,--start-group ${_deps} -Wl,--end-group)
 target_include_directories(lwip_echo_server.elf PUBLIC "${CMAKE_BINARY_DIR}/include")
-if (${OS_ESW})
+if (${NON_YOCTO})
    set (INCLUDE_DIRS
        "${CMAKE_INCLUDE_PATH}/include/"
        "${CMAKE_BINARY_DIR}/include")
