*.yaml : fixing the usage of required/depends/depends_libs across all the drivers, libraries and apps
This patch:
1. Changes the depends option from list to dict,
2. Removes the usage of 'required' in apps yamls and change it to depends
3. Fixes the usage of 'depends_libs', makes the lib params as dict key instead of list
Signed-off-by: Onkar Harsh <onkar.harsh@amd.com>

--- a/lib/sw_apps/empty_application/data/empty_application.yaml
+++ b/lib/sw_apps/empty_application/data/empty_application.yaml
@@ -10,7 +10,7 @@ maintainers:
 description: A blank C project.
 
 depends_libs:
-    - xiltimer
+    xiltimer: {}
 
 supported_processors:
   - psu_cortexa53
