--- a/lib/sw_apps/freertos_hello_world/data/freertos_hello_world.yaml
+++ b/lib/sw_apps/freertos_hello_world/data/freertos_hello_world.yaml
@@ -16,7 +16,7 @@ supported_processors:
   - psv_cortexr5
 
 depends_libs:
-    - xiltimer
+    xiltimer: {}
 
 supported_os:
     - freertos10_xilinx
