--- a/lib/sw_apps/freertos_lwip_echo_server/data/freertos_lwip_echo_server.yaml
+++ b/lib/sw_apps/freertos_lwip_echo_server/data/freertos_lwip_echo_server.yaml
@@ -16,17 +16,8 @@ properties:
     description: Interrupt property of the controller
 
 depends_libs:
-    - lwip211
-    - xiltimer
-    - freertos10_xilinx
-
-lib_config:
-    lwip211:
-        - lwip_api_mode: SOCKET_API
-        - lwip_dhcp_does_arp_check: ON
-        - lwip_dhcp: ON
-        - lwip_ipv6_enable: OFF
-        - lwip_pbuf_pool_size: 2048
+    lwip211: {}
+    xiltimer: {}
 
 supported_processors:
   - psu_cortexa53
@@ -38,11 +29,6 @@ supported_os:
     - freertos10_xilinx
 
 depends:
-    - emaclite
-    - axiethernet
-    - emacps
-
-required:
     emaclite:
         - reg
         - interrupts
