--- a/lib/sw_services/xilplmi/src/CMakeLists.txt
+++ b/lib/sw_services/xilplmi/src/CMakeLists.txt
@@ -53,7 +53,9 @@ collect (PROJECT_LIB_HEADERS xplmi_task.h)
 collector_list (_sources PROJECT_LIB_SOURCES)
 collector_list (_headers PROJECT_LIB_HEADERS)
 file(COPY ${_headers} DESTINATION ${CMAKE_BINARY_DIR}/include)
+if (${NON_YOCTO})
 file(COPY ${CMAKE_BINARY_DIR}/include/xilplmi_config.h DESTINATION ${CMAKE_INCLUDE_PATH}/)
+endif()
 add_library(xilplmi STATIC ${_sources})
 set_target_properties(xilplmi PROPERTIES LINKER_LANGUAGE C)
 get_headers(${_headers})
