--- a/lib/sw_services/xilsem/src/CMakeLists.txt
+++ b/lib/sw_services/xilsem/src/CMakeLists.txt
@@ -10,7 +10,9 @@ collector_create (PROJECT_LIB_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}")
 collect (PROJECT_LIB_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/server/xilsem.h)
 collector_list (_headers PROJECT_LIB_HEADERS)
 file(COPY ${_headers} DESTINATION ${CMAKE_BINARY_DIR}/include)
+if (${NON_YOCTO})
 file(COPY ${CMAKE_BINARY_DIR}/include/xilsem_config.h DESTINATION ${CMAKE_INCLUDE_PATH}/)
+endif()
 add_library(xilsem INTERFACE)
 execute_process(COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/server/libxilsem.a ${CMAKE_BINARY_DIR}/libxilsem.a)
 #execute_process(COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_BINARY_DIR}/libxilsem.a) ${CMAKE_LIBRARY_PATH}/libxilsem.a)
