--- a/lib/sw_services/xilmailbox/src/CMakeLists.txt
+++ b/lib/sw_services/xilmailbox/src/CMakeLists.txt
@@ -16,11 +16,12 @@ collect (PROJECT_LIB_HEADERS xilmailbox.h)
 collector_list (_sources PROJECT_LIB_SOURCES)
 collector_list (_headers PROJECT_LIB_HEADERS)
 file(COPY ${_headers} DESTINATION ${CMAKE_BINARY_DIR}/include)
+if (${NON_YOCTO})
 file(COPY ${CMAKE_BINARY_DIR}/include/xilmailbox_hwconfig.h DESTINATION ${CMAKE_INCLUDE_PATH}/)
+endif()
 add_library(xilmailbox STATIC ${_sources})
 set_target_properties(xilmailbox PROPERTIES LINKER_LANGUAGE C)
 get_headers(${_headers})
 set_target_properties(xilmailbox PROPERTIES ADDITIONAL_CLEAN_FILES "${CMAKE_LIBRARY_PATH}/libxilmailbox.a;${CMAKE_INCLUDE_PATH}/xilmailbox_hwconfig.h;${clean_headers}")
-#install(TARGETS xilmailbox LIBRARY DESTINATION ${CMAKE_SOURCE_DIR}/build ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})
 install(TARGETS xilmailbox LIBRARY DESTINATION ${CMAKE_LIBRARY_PATH} ARCHIVE DESTINATION ${CMAKE_LIBRARY_PATH})
 install(DIRECTORY ${CMAKE_BINARY_DIR}/include DESTINATION ${CMAKE_INCLUDE_PATH}/..) 
