--- a/lib/sw_services/xilpm/src/CMakeLists.txt
+++ b/lib/sw_services/xilpm/src/CMakeLists.txt
@@ -18,7 +18,9 @@ endif()
 collector_list (_sources PROJECT_LIB_SOURCES)
 collector_list (_headers PROJECT_LIB_HEADERS)
 file(COPY ${_headers} DESTINATION ${CMAKE_BINARY_DIR}/include)
+if (${NON_YOCTO})
 file(COPY ${CMAKE_BINARY_DIR}/include/xpm_config.h DESTINATION ${CMAKE_INCLUDE_PATH}/)
+endif()
 add_library(xilpm STATIC ${_sources})
 set_target_properties(xilpm PROPERTIES LINKER_LANGUAGE C)
 get_headers(${_headers})
