--- a/lib/sw_services/xilsecure/src/CMakeLists.txt
+++ b/lib/sw_services/xilsecure/src/CMakeLists.txt
@@ -33,7 +33,9 @@ endforeach()
 collector_list (_sources PROJECT_LIB_SOURCES)
 collector_list (_headers PROJECT_LIB_HEADERS)
 file(COPY ${_headers} DESTINATION ${CMAKE_BINARY_DIR}/include)
+if (${NON_YOCTO})
 file(COPY ${CMAKE_BINARY_DIR}/include/xsecure_config.h DESTINATION ${CMAKE_INCLUDE_PATH}/)
+endif()
 #execute_process(COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/versal/libxilsecure_pmc.a ${CMAKE_BINARY_DIR}/libxilsecure.a)
 add_library(xilsecure STATIC ${_sources})
 set_target_properties(xilsecure PROPERTIES LINKER_LANGUAGE C)
