--- a/lib/sw_services/xilskey/src/CMakeLists.txt
+++ b/lib/sw_services/xilskey/src/CMakeLists.txt
@@ -40,7 +40,9 @@ endif()
 collector_list (_sources PROJECT_LIB_SOURCES)
 collector_list (_headers PROJECT_LIB_HEADERS)
 file(COPY ${_headers} DESTINATION ${CMAKE_BINARY_DIR}/include)
+if (${NON_YOCTO})
 file(COPY ${CMAKE_BINARY_DIR}/include/xilskey_config.h DESTINATION ${CMAKE_INCLUDE_PATH}/)
+endif()
 add_library(xilskey STATIC ${_sources})
 set_target_properties(xilskey PROPERTIES LINKER_LANGUAGE C)
 get_headers(${_headers})
