--- a/lib/sw_services/xiltimer/src/CMakeLists.txt
+++ b/lib/sw_services/xiltimer/src/CMakeLists.txt
@@ -20,7 +20,9 @@ collect (PROJECT_LIB_HEADERS xiltimer.h)
 collector_list (_sources PROJECT_LIB_SOURCES)
 collector_list (_headers PROJECT_LIB_HEADERS)
 file(COPY ${_headers} DESTINATION ${CMAKE_BINARY_DIR}/include)
+if (${NON_YOCTO})
 file(COPY ${CMAKE_BINARY_DIR}/include/xtimer_config.h DESTINATION ${CMAKE_INCLUDE_PATH}/)
+endif()
 add_library(xiltimer STATIC ${_sources})
 set_target_properties(xiltimer PROPERTIES LINKER_LANGUAGE C)
 get_headers(${_headers})
