lib: sw_services: Update cmake files as per latest library folder structure
Signed-off-by: Appana Durga Kedareswara rao <appana.durga.kedareswara.rao@amd.com>

--- a/lib/sw_services/xilloader/src/CMakeLists.txt
+++ b/lib/sw_services/xilloader/src/CMakeLists.txt
@@ -1,36 +1,18 @@
 # Copyright (c) 2021 Xilinx, Inc.  All rights reserved.
 # SPDX-License-Identifier: MIT
-cmake_minimum_required(VERSION 2.8.9)
+cmake_minimum_required(VERSION 3.15)
 project(xilloader)
 
 find_package(common)
 collector_create (PROJECT_LIB_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}")
 collector_create (PROJECT_LIB_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}")
 include_directories(${CMAKE_BINARY_DIR}/include)
-collect (PROJECT_LIB_HEADERS xloader_sbi.h)
-collect (PROJECT_LIB_HEADERS xloader_sd.h)
-collect (PROJECT_LIB_SOURCES xloader_intr.c)
-collect (PROJECT_LIB_HEADERS xloader_auth_enc.h)
-collect (PROJECT_LIB_SOURCES xloader_cfi.c)
-collect (PROJECT_LIB_HEADERS xloader.h)
-collect (PROJECT_LIB_SOURCES xloader_sbi.c)
-collect (PROJECT_LIB_HEADERS xloader_dfu_util.h)
-collect (PROJECT_LIB_SOURCES xloader_sd.c)
-collect (PROJECT_LIB_SOURCES xloader_ospi.c)
-collect (PROJECT_LIB_SOURCES xloader.c)
-collect (PROJECT_LIB_SOURCES xloader_usb.c)
-collect (PROJECT_LIB_SOURCES xloader_ddr.c)
-collect (PROJECT_LIB_SOURCES xloader_cmd.c)
-collect (PROJECT_LIB_SOURCES xloader_qspi.c)
-collect (PROJECT_LIB_HEADERS xloader_secure.h)
-collect (PROJECT_LIB_HEADERS xloader_usb.h)
-collect (PROJECT_LIB_HEADERS xloader_qspi.h)
-collect (PROJECT_LIB_SOURCES xloader_dfu_util.c)
-collect (PROJECT_LIB_SOURCES xloader_prtn_load.c)
-collect (PROJECT_LIB_SOURCES xloader_secure.c)
-collect (PROJECT_LIB_SOURCES xloader_auth_enc.c)
-collect (PROJECT_LIB_HEADERS xloader_ospi.h)
-collect (PROJECT_LIB_HEADERS xloader_ddr.h)
+add_subdirectory(common)
+if("${CMAKE_MACHINE}" STREQUAL "Versal")
+    add_subdirectory(versal)
+else()
+    add_subdirectory(versal_net)
+endif()
 collector_list (_sources PROJECT_LIB_SOURCES)
 collector_list (_headers PROJECT_LIB_HEADERS)
 file(COPY ${_headers} DESTINATION ${CMAKE_BINARY_DIR}/include)
