--- a/lib/sw_services/xilplmi/src/CMakeLists.txt
+++ b/lib/sw_services/xilplmi/src/CMakeLists.txt
@@ -8,48 +8,10 @@ include(${CMAKE_CURRENT_SOURCE_DIR}/xilplmi.cmake NO_POLICY_SCOPE)
 collector_create (PROJECT_LIB_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}")
 collector_create (PROJECT_LIB_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}")
 include_directories(${CMAKE_BINARY_DIR}/include)
-collect (PROJECT_LIB_SOURCES xplmi_modules.c)
-collect (PROJECT_LIB_SOURCES xplmi_proc.c)
-collect (PROJECT_LIB_HEADERS xplmi_event_logging.h)
-collect (PROJECT_LIB_HEADERS xplmi_cmd.h)
-collect (PROJECT_LIB_SOURCES xplmi_wdt.c)
-collect (PROJECT_LIB_HEADERS xplmi_cdo.h)
-collect (PROJECT_LIB_HEADERS xplmi_sysmon.h)
-collect (PROJECT_LIB_HEADERS xplmi_ipi.h)
-collect (PROJECT_LIB_HEADERS xplmi_gic_interrupts.h)
-collect (PROJECT_LIB_HEADERS xplmi.h)
-collect (PROJECT_LIB_HEADERS xplmi_status.h)
-collect (PROJECT_LIB_SOURCES xplmi.c)
-collect (PROJECT_LIB_SOURCES xplmi_generic.c)
-collect (PROJECT_LIB_HEADERS xplmi_error_node.h)
-collect (PROJECT_LIB_HEADERS xplmi_util.h)
-collect (PROJECT_LIB_HEADERS xplmi_proc.h)
-collect (PROJECT_LIB_SOURCES xplmi_event_logging.c)
-collect (PROJECT_LIB_SOURCES xplmi_gic_interrupts.c)
-collect (PROJECT_LIB_HEADERS xplmi_debug.h)
-collect (PROJECT_LIB_HEADERS list.h)
-collect (PROJECT_LIB_SOURCES xplmi_util.c)
-collect (PROJECT_LIB_SOURCES xplmi_ipi.c)
-collect (PROJECT_LIB_HEADERS xplmi_dma.h)
-collect (PROJECT_LIB_SOURCES xplmi_err_cmd.c)
-collect (PROJECT_LIB_SOURCES xplmi_err.c)
-collect (PROJECT_LIB_HEADERS xplmi_config.h)
-collect (PROJECT_LIB_HEADERS xplmi_hw.h)
-collect (PROJECT_LIB_SOURCES xplmi_cmd.c)
-collect (PROJECT_LIB_HEADERS xplmi_modules.h)
-collect (PROJECT_LIB_SOURCES xplmi_cdo.c)
-collect (PROJECT_LIB_HEADERS xplmi_scheduler.h)
-collect (PROJECT_LIB_SOURCES xplmi_debug.c)
-collect (PROJECT_LIB_SOURCES xplmi_ssit.c)
-collect (PROJECT_LIB_HEADERS xplmi_ssit.h)
-collect (PROJECT_LIB_SOURCES xplmi_dma.c)
-collect (PROJECT_LIB_HEADERS xplmi_err.h)
-collect (PROJECT_LIB_SOURCES xplmi_scheduler.c)
-collect (PROJECT_LIB_SOURCES xplmi_task.c)
-collect (PROJECT_LIB_HEADERS xplmi_wdt.h)
-collect (PROJECT_LIB_HEADERS xplmi_generic.h)
-collect (PROJECT_LIB_SOURCES xplmi_sysmon.c)
-collect (PROJECT_LIB_HEADERS xplmi_task.h)
+add_subdirectory(common)
+if("${CMAKE_MACHINE}" STREQUAL "Versal")
+    add_subdirectory(versal)
+endif()
 collector_list (_sources PROJECT_LIB_SOURCES)
 collector_list (_headers PROJECT_LIB_HEADERS)
 file(COPY ${_headers} DESTINATION ${CMAKE_BINARY_DIR}/include)
