--- a/lib/sw_services/xilsecure/src/common/CMakeLists.txt
+++ b/lib/sw_services/xilsecure/src/common/CMakeLists.txt
@@ -1,6 +1,6 @@
 # Copyright (c) 2021 Xilinx, Inc.  All rights reserved.
 # SPDX-License-Identifier: MIT
-collect (PROJECT_LIB_HEADERS xsecure_utils.h)
-collect (PROJECT_LIB_SOURCES xsecure_rsa.c)
-collect (PROJECT_LIB_HEADERS xsecure_rsa.h)
-collect (PROJECT_LIB_SOURCES xsecure_utils.c)
+add_subdirectory(all)
+if("${CMAKE_MACHINE}" STREQUAL "Versal")
+	add_subdirectory(versal_common)
+endif()
