--- a/lib/sw_services/xilnvm/src/CMakeLists.txt
+++ b/lib/sw_services/xilnvm/src/CMakeLists.txt
@@ -8,12 +8,7 @@ collector_create (PROJECT_LIB_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}")
 collector_create (PROJECT_LIB_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}")
 include_directories(${CMAKE_BINARY_DIR}/include)
 add_subdirectory(common)
-if(("${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "plm_microblaze") OR
-   ("${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "pmu_microblaze"))
-add_subdirectory(server)
-else()
-add_subdirectory(client)
-endif()
+add_subdirectory(versal)
 collector_list (_sources PROJECT_LIB_SOURCES)
 collector_list (_headers PROJECT_LIB_HEADERS)
 file(COPY ${_headers} DESTINATION ${CMAKE_BINARY_DIR}/include)
