--- a/lib/sw_services/xilpdi/src/CMakeLists.txt
+++ b/lib/sw_services/xilpdi/src/CMakeLists.txt
@@ -7,8 +7,11 @@ find_package(common)
 collector_create (PROJECT_LIB_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}")
 collector_create (PROJECT_LIB_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}")
 include_directories(${CMAKE_BINARY_DIR}/include)
-collect (PROJECT_LIB_SOURCES xilpdi.c)
-collect (PROJECT_LIB_HEADERS xilpdi.h)
+
+add_subdirectory(common)
+if("${CMAKE_MACHINE}" STREQUAL "Versal")
+    add_subdirectory(versal)
+endif()
 collector_list (_sources PROJECT_LIB_SOURCES)
 collector_list (_headers PROJECT_LIB_HEADERS)
 file(COPY ${_headers} DESTINATION ${CMAKE_BINARY_DIR}/include)
