--- a/lib/sw_services/xilsecure/src/common/versal_common/CMakeLists.txt
+++ b/lib/sw_services/xilsecure/src/common/versal_common/CMakeLists.txt
@@ -1,9 +1,14 @@
 # Copyright (c) 2021 Xilinx, Inc.  All rights reserved.
 # SPDX-License-Identifier: MIT
-if (("${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "microblaze") OR 
+cmake_minimum_required(VERSION 2.8.9)
+
+add_subdirectory(common)
+if(("${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "microblaze") OR 
    ("${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "microblazeel") OR
    ("${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "plm_microblaze") OR
    ("${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "pmu_microblaze") OR
-    NOT(${XILSECURE_Mode}))
-	collect (PROJECT_LIB_HEADERS xsecure_plat_defs.h)
+   (${XILSECURE_Mode}))
+   add_subdirectory(server)
+else()
+  add_subdirectory(client)
 endif()
