--- a/lib/sw_services/xilsecure/src/common/versal_common/client/CMakeLists.txt
+++ b/lib/sw_services/xilsecure/src/common/versal_common/client/CMakeLists.txt
@@ -1,9 +1,9 @@
-# Copyright (c) 2021 Xilinx, Inc.  All rights reserved.
-# SPDX-License-Identifier: MIT
 collect (PROJECT_LIB_SOURCES xsecure_aesclient.c)
 collect (PROJECT_LIB_HEADERS xsecure_aesclient.h)
 collect (PROJECT_LIB_SOURCES xsecure_ellipticclient.c)
 collect (PROJECT_LIB_HEADERS xsecure_ellipticclient.h)
+collect (PROJECT_LIB_SOURCES xsecure_katclient.c)
+collect (PROJECT_LIB_HEADERS xsecure_katclient.h)
 collect (PROJECT_LIB_SOURCES xsecure_mailbox.c)
 collect (PROJECT_LIB_HEADERS xsecure_mailbox.h)
 collect (PROJECT_LIB_SOURCES xsecure_rsaclient.c)
