lib: sw_apps: versal_plm: Update Cmake handling as per latest source structure
Signed-off-by: Appana Durga Kedareswara rao <appana.durga.kedareswara.rao@amd.com>

--- a/lib/sw_apps/versal_plm/src/CMakeLists.txt
+++ b/lib/sw_apps/versal_plm/src/CMakeLists.txt
@@ -38,23 +38,18 @@ find_library(_lib_path ${_lib})
 collector_list (_deps PROJECT_LIB_DEPS)
 message(STATUS "deps is:" ${_deps})
 
-collect (PROJECT_LIB_HEADERS xplm_module.h)
-collect (PROJECT_LIB_HEADERS xplm_pm.h)
-collect (PROJECT_LIB_SOURCES xplm_proc.c)
-collect (PROJECT_LIB_HEADERS xplm_proc.h)
-collect (PROJECT_LIB_HEADERS xplm_startup.h)
-collect (PROJECT_LIB_HEADERS xplm_hooks.h)
-collect (PROJECT_LIB_HEADERS xplm_loader.h)
-collect (PROJECT_LIB_SOURCES xplm_main.c)
-collect (PROJECT_LIB_HEADERS xplm_default.h)
-collect (PROJECT_LIB_SOURCES xplm_startup.c)
-collect (PROJECT_LIB_SOURCES xplm_module.c)
-collect (PROJECT_LIB_SOURCES xplm_loader.c)
-collect (PROJECT_LIB_SOURCES xplm_hooks.c)
-collect (PROJECT_LIB_SOURCES xplm_sem_init.c)
-collect (PROJECT_LIB_HEADERS xplm_sem_init.h)
-collect (PROJECT_LIB_SOURCES xplm_pm.c)
+collector_create (PROJECT_LIB_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}")
+collector_create (PROJECT_LIB_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}")
+add_subdirectory(common)
+if (("${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "plm_microblaze"))
+	add_subdirectory(versal)
+else()
+	add_subdirectory(versal_net)
+endif()
+
 collector_list (_sources PROJECT_LIB_SOURCES)
+collector_list (_headers PROJECT_LIB_HEADERS)
+file(COPY ${_headers} DESTINATION ${CMAKE_BINARY_DIR}/include)
 add_executable(versal_plm.elf ${_sources})
 #target_link_libraries(versal_plm.elf -Wl,--gc-sections -T\"${CMAKE_SOURCE_DIR}/lscript.ld\" -Wl,--start-group ${_deps} -Wl,--end-group)
-target_link_libraries(versal_plm.elf -Wl,-Map=versal_plm.map -Wl,--build-id=none -Wl,--gc-sections -T\"${CMAKE_SOURCE_DIR}/lscript.ld\" -Wl,--start-group ${_deps} -Wl,--end-group)
+target_link_libraries(versal_plm.elf -Wl,-Map=versal_plm.map -Wl,--build-id=none -Wl,--gc-sections -T\"${CMAKE_SOURCE_DIR}/versal/lscript.ld\" -Wl,--start-group ${_deps} -Wl,--end-group)
