lib: sw_apps: versal_psmfw: Update Cmake handling as per latest source structure
Signed-off-by: Appana Durga Kedareswara rao <appana.durga.kedareswara.rao@amd.com>

--- a/lib/sw_apps/versal_psmfw/src/CMakeLists.txt
+++ b/lib/sw_apps/versal_psmfw/src/CMakeLists.txt
@@ -16,38 +16,13 @@ collect(PROJECT_LIB_DEPS c)
 collector_list (_deps PROJECT_LIB_DEPS)
 message(STATUS "deps is:" ${_deps})
 
-collect (PROJECT_LIB_HEADERS xpsmfw_default.h)
-collect (PROJECT_LIB_HEADERS xpsmfw_util.h)
-collect (PROJECT_LIB_HEADERS xpsmfw_debug.h)
-collect (PROJECT_LIB_HEADERS fpd_apu.h)
-collect (PROJECT_LIB_HEADERS xpsmfw_api.h)
-collect (PROJECT_LIB_HEADERS xpsmfw_power.h)
-collect (PROJECT_LIB_HEADERS psm_global.h)
-collect (PROJECT_LIB_HEADERS xpsmfw_iomodule.h)
-collect (PROJECT_LIB_HEADERS ipi.h)
-collect (PROJECT_LIB_SOURCES xpsmfw_power.c)
-collect (PROJECT_LIB_HEADERS xpsmfw_ipi_manager.h)
-collect (PROJECT_LIB_SOURCES xpsmfw_gic.c)
-collect (PROJECT_LIB_SOURCES xpsmfw_dvsec.c)
-collect (PROJECT_LIB_SOURCES xpsmfw_util.c)
-collect (PROJECT_LIB_HEADERS crf.h)
-collect (PROJECT_LIB_HEADERS psm_local.h)
-collect (PROJECT_LIB_SOURCES xpsmfw_iomodule.c)
-collect (PROJECT_LIB_HEADERS xpsmfw_dvsec.h)
-collect (PROJECT_LIB_SOURCES xpsmfw_init.c)
-collect (PROJECT_LIB_SOURCES xpsmfw_api.c)
-collect (PROJECT_LIB_SOURCES xpsmfw_main.c)
-collect (PROJECT_LIB_HEADERS xpsmfw_config.h)
-collect (PROJECT_LIB_HEADERS xpsmfw_gic.h)
-collect (PROJECT_LIB_SOURCES xpsmfw_ipi_manager.c)
-collect (PROJECT_LIB_HEADERS xpsmfw_dvsec_common.h)
-collect (PROJECT_LIB_HEADERS xpsmfw_main.h)
-collect (PROJECT_LIB_HEADERS xpsmfw_init.h)
-collect (PROJECT_LIB_HEADERS pmc_global.h)
-collect (PROJECT_LIB_HEADERS crl.h)
-collect (PROJECT_LIB_HEADERS rpu.h)
-collect (PROJECT_LIB_HEADERS xpsmfw_stl.h)
-collect (PROJECT_LIB_SOURCES xpsmfw_stl.c)
+collector_create (PROJECT_LIB_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}")
+collector_create (PROJECT_LIB_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}")
+add_subdirectory(common)
+add_subdirectory(versal)
+
 collector_list (_sources PROJECT_LIB_SOURCES)
+collector_list (_headers PROJECT_LIB_HEADERS)
+file(COPY ${_headers} DESTINATION ${CMAKE_BINARY_DIR}/include)
 add_executable(versal_psmfw.elf ${_sources})
-target_link_libraries(versal_psmfw.elf -Wl,-Map=versal_plm.map -Wl,--build-id=none -Wl,--gc-sections -T\"${CMAKE_SOURCE_DIR}/lscript.ld\" -Wl,--start-group ${_deps} -Wl,--end-group)
+target_link_libraries(versal_psmfw.elf -Wl,-Map=versal_plm.map -Wl,--build-id=none -Wl,--gc-sections -T\"${CMAKE_SOURCE_DIR}/versal/lscript.ld\" -Wl,--start-group ${_deps} -Wl,--end-group)
