esw: Update cmake file to handle subdirectories for non yocto flow
Signed-off-by: Appana Durga Kedareswara rao <appana.durga.kedareswara.rao@amd.com>

--- a/XilinxProcessorIPLib/drivers/CMakeLists.txt
+++ b/XilinxProcessorIPLib/drivers/CMakeLists.txt
@@ -10,6 +10,10 @@ FOREACH(DRIVER ${DRIVER_LIST})
     STRING(REGEX REPLACE "-" "_" DRIVER ${DRIVER})
     add_subdirectory(${DRIVER}/src)
     list(APPEND OBJS ${CMAKE_BINARY_DIR}/${DRIVER}/src/CMakeFiles/${DRIVER}.dir/*.obj)
+    subdirlist(SUBDIRS ${CMAKE_SOURCE_DIR}/${DRIVER}/src)
+    foreach(subdir ${SUBDIRS})
+	    list(APPEND OBJS ${CMAKE_BINARY_DIR}/${DRIVER}/src/CMakeFiles/${DRIVER}.dir/${subdir}/*.obj)
+    endforeach()
 ENDFOREACH()
 
 set(XIL_LIB ${CMAKE_BINARY_DIR}/libxil.a)
