--- a/XilinxProcessorIPLib/drivers/common/src/CMakeLists.txt
+++ b/XilinxProcessorIPLib/drivers/common/src/CMakeLists.txt
@@ -4,8 +4,13 @@ cmake_minimum_required(VERSION 2.8.9)
 project(common)
 
 find_package(common)
+if (${NON_YOCTO})
+set(INTC_DIR "${CMAKE_SOURCE_DIR}/intc/src/")
+set(SCUGIC_DIR "${CMAKE_SOURCE_DIR}/scugic/src/")
+else()
 set(INTC_DIR "${CMAKE_CURRENT_SOURCE_DIR}")
 set(SCUGIC_DIR "${CMAKE_CURRENT_SOURCE_DIR}")
+endif()
 find_package(INTC)
 list(APPEND defs "#ifndef XCOMMON_DRV_CONFIG_H_\n")
 list(APPEND defs "#define XCOMMON_DRV_CONFIG_H_\n\n")
