wdttb: rebase bug fixes
Signed-off-by: Appana Durga Kedareswara rao <appana.durga.kedareswara.rao@amd.com>

--- a/XilinxProcessorIPLib/drivers/wdttb/data/wdttb.yaml
+++ b/XilinxProcessorIPLib/drivers/wdttb/data/wdttb.yaml
@@ -27,6 +27,7 @@ required:
     - compatible
     - reg
     - xlnx,enable-window-wdt
+    - xlnx,wdt-clk-freq-hz
     - interrupts: 4
     - interrupt-parent
 
