lib: sw_apps: lwip*: Modify apps to support rigel flow
Signed-off-by: Appana Durga Kedareswara rao <appana.durga.kedareswara.rao@amd.com>

--- a/lib/sw_apps/freertos_lwip_tcp_perf_client/src/CMakeLists.txt
+++ b/lib/sw_apps/freertos_lwip_tcp_perf_client/src/CMakeLists.txt
@@ -1,11 +1,11 @@
 # Copyright (c) 2021 Xilinx, Inc.  All rights reserved.
 # SPDX-License-Identifier: MIT
 cmake_minimum_required(VERSION 2.8.9)
-include(${CMAKE_CURRENT_SOURCE_DIR}/../../../../cmake/common.cmake NO_POLICY_SCOPE)
 include(${CMAKE_CURRENT_SOURCE_DIR}/Freertos_lwip_tcp_perf_clientExample.cmake)
 project(freertos_lwip_tcp_perf_client)
 
-include(${CMAKE_SOURCE_DIR}/../data/freertos_lwip_tcp_perf_client.cmake NO_POLICY_SCOPE)
+find_package(common)
+include(${CMAKE_SOURCE_DIR}/freertos_lwip_tcp_perf_client.cmake NO_POLICY_SCOPE)
 enable_language(C ASM)
 collect(PROJECT_LIB_DEPS xilstandalone)
 collect(PROJECT_LIB_DEPS xil)
@@ -16,8 +16,17 @@ collect(PROJECT_LIB_DEPS gcc)
 collect(PROJECT_LIB_DEPS c)
 collector_list (_deps PROJECT_LIB_DEPS)
 
-SET(SOURCES main.c;iic_phyreset.c;freertos_tcp_perf_client.c;)
-linker_gen("${CMAKE_CURRENT_SOURCE_DIR}/../../../../scripts/linker_files/")
+SET(SOURCES freertos_tcp_perf_client.c;main.c;iic_phyreset.c;)
+file(COPY freertos_tcp_perf_client.h DESTINATION ${CMAKE_BINARY_DIR}/include)
+linker_gen("${CMAKE_CURRENT_SOURCE_DIR}/linker_files/")
 add_executable(freertos_lwip_tcp_perf_client.elf ${SOURCES})
 target_link_libraries(freertos_lwip_tcp_perf_client.elf -Wl,--gc-sections -T\"${CMAKE_SOURCE_DIR}/lscript.ld\" -L\"${CMAKE_SOURCE_DIR}/\" -Wl,--start-group ${_deps} -Wl,--end-group)
-target_include_directories(freertos_lwip_tcp_perf_client.elf PUBLIC "${CMAKE_BINARY_DIR}/include")
+if (${NON_YOCTO})
+    set(INCLUDE_DIRS
+        "${CMAKE_INCLUDE_PATH}/"
+        "${CMAKE_INCLUDE_PATH}/include/"
+        "${CMAKE_BINARY_DIR}/include")
+    target_include_directories(freertos_lwip_tcp_perf_client.elf PUBLIC ${INCLUDE_DIRS})
+else()
+    target_include_directories(freertos_lwip_tcp_perf_client.elf PUBLIC "${CMAKE_BINARY_DIR}/include")
+endif()
