--- a/lib/sw_apps/freertos_lwip_tcp_perf_client/src/platform_config.h.in
+++ b/lib/sw_apps/freertos_lwip_tcp_perf_client/src/platform_config.h.in
@@ -5,6 +5,10 @@
 #ifndef __PLATFORM_CONFIG_H_
 #define __PLATFORM_CONFIG_H_
 
+#include "FreeRTOS.h"
+#include "freertos_tcp_perf_client.h"
+#include "lwip/sys.h"
+
 #cmakedefine PLATFORM_EMAC_BASEADDR @PLATFORM_EMAC_BASEADDR@
 
 #endif
