--- a/lib/sw_apps/lwip_udp_perf_server/src/CMakeLists.txt
+++ b/lib/sw_apps/lwip_udp_perf_server/src/CMakeLists.txt
@@ -1,11 +1,11 @@
 # Copyright (c) 2021 Xilinx, Inc.  All rights reserved.
 # SPDX-License-Identifier: MIT
 cmake_minimum_required(VERSION 2.8.9)
-include(${CMAKE_CURRENT_SOURCE_DIR}/../../../../cmake/common.cmake NO_POLICY_SCOPE)
 include(${CMAKE_CURRENT_SOURCE_DIR}/Lwip_udp_perf_serverExample.cmake)
 project(lwip_udp_perf_server)
 
-include(${CMAKE_SOURCE_DIR}/../data/lwip_udp_perf_server.cmake NO_POLICY_SCOPE)
+find_package(common)
+include(${CMAKE_SOURCE_DIR}/lwip_udp_perf_server.cmake NO_POLICY_SCOPE)
 enable_language(C ASM)
 collect(PROJECT_LIB_DEPS xilstandalone)
 collect(PROJECT_LIB_DEPS xil)
@@ -16,7 +16,13 @@ collect(PROJECT_LIB_DEPS c)
 collector_list (_deps PROJECT_LIB_DEPS)
 
 SET(SOURCES si5324.c;sfp.c;main.c;i2c_access.c;platform.c;iic_phyreset.c;udp_perf_server.c)
-linker_gen("${CMAKE_CURRENT_SOURCE_DIR}/../../../../scripts/linker_files/")
+linker_gen("${CMAKE_CURRENT_SOURCE_DIR}/linker_files/")
 add_executable(lwip_udp_perf_server.elf ${SOURCES})
 target_link_libraries(lwip_udp_perf_server.elf -Wl,--gc-sections -T\"${CMAKE_SOURCE_DIR}/lscript.ld\" -L\"${CMAKE_SOURCE_DIR}/\" -Wl,--start-group ${_deps} -Wl,--end-group)
 target_include_directories(lwip_udp_perf_server.elf PUBLIC "${CMAKE_BINARY_DIR}/include")
+if (${NON_YOCTO})
+   set (INCLUDE_DIRS
+       "${CMAKE_INCLUDE_PATH}/include/"
+       "${CMAKE_BINARY_DIR}/include")
+  target_include_directories(lwip_udp_perf_server.elf PUBLIC ${INCLUDE_DIRS})
+endif()
