--- a/lib/sw_apps/freertos_lwip_echo_server/data/freertos_lwip_echo_server.yaml
+++ b/lib/sw_apps/freertos_lwip_echo_server/data/freertos_lwip_echo_server.yaml
@@ -18,6 +18,15 @@ properties:
 depends_libs:
     - lwip211
     - xiltimer
+    - freertos10_xilinx
+
+lib_config:
+    lwip211:
+        - lwip_api_mode: SOCKET_API
+        - lwip_dhcp_does_arp_check: ON
+        - lwip_dhcp: ON
+        - lwip_ipv6_enable: OFF
+        - lwip_pbuf_pool_size: 2048
 
 supported_processors:
   - psu_cortexa53
