--- a/lib/sw_apps/freertos_lwip_tcp_perf_client/data/freertos_lwip_tcp_perf_client.yaml
+++ b/lib/sw_apps/freertos_lwip_tcp_perf_client/data/freertos_lwip_tcp_perf_client.yaml
@@ -15,6 +15,19 @@ properties:
   interrupts:
     description: Interrupt property of the controller
 
+depends_libs:
+    - lwip211
+    - xiltimer
+    - freertos10_xilinx
+
+lib_config:
+    lwip211:
+        - lwip_api_mode: SOCKET_API
+        - lwip_dhcp_does_arp_check: ON
+        - lwip_dhcp: ON
+        - lwip_ipv6_enable: OFF
+        - lwip_pbuf_pool_size: 2048
+
 supported_processors:
     - psu_cortexa53
     - psu_cortexr5
