--- a/lib/sw_apps/lwip_udp_perf_client/data/lwip_udp_perf_client.yaml
+++ b/lib/sw_apps/lwip_udp_perf_client/data/lwip_udp_perf_client.yaml
@@ -22,18 +22,7 @@ supported_processors:
 supported_os:
   - standalone
 
-depends:
-    - emaclite
-    - axiethernet
-    - emacps
-    - tmrctr
-    - ttcps
-
 depends_libs:
-    - lwip211
-    - xiltimer
-
-lib_config:
     lwip211:
         - lwip_api_mode: RAW_API
         - lwip_dhcp_does_arp_check: ON
@@ -43,8 +32,9 @@ lib_config:
         - lwip_n_tx_descriptors: 512
         - lwip_memp_n_pbuf: 1024
         - lwip_mem_size: 524288
+    xiltimer: {}
 
-required:
+depends:
     emaclite:
         - reg
         - interrupts
