--- a/lib/sw_apps/lwip_echo_server/data/lwip_echo_server.yaml
+++ b/lib/sw_apps/lwip_echo_server/data/lwip_echo_server.yaml
@@ -49,6 +49,6 @@ depends_libs:
         lwip_dhcp: ON
         lwip_ipv6_enable: OFF
         lwip_pbuf_pool_size: 2048
-    xiltimer: {}
-
+    xiltimer:
+        XILTIMER_en_interval_timer: ON
 ...
