--- a/lib/sw_apps/lwip_udp_perf_server/data/lwip_udp_perf_server.yaml
+++ b/lib/sw_apps/lwip_udp_perf_server/data/lwip_udp_perf_server.yaml
@@ -24,15 +24,16 @@ supported_os:
 
 depends_libs:
     lwip211:
-        - lwip_api_mode: RAW_API
-        - lwip_dhcp_does_arp_check: ON
-        - lwip_dhcp: ON
-        - lwip_ipv6_enable: OFF
-        - lwip_pbuf_pool_size: 16384
-        - lwip_n_rx_descriptors: 512
-        - lwip_memp_n_pbuf: 1024
-        - lwip_mem_size: 524288
-    xiltimer: {}
+        lwip_api_mode: RAW_API
+        lwip_dhcp_does_arp_check: ON
+        lwip_dhcp: ON
+        lwip_ipv6_enable: OFF
+        lwip_pbuf_pool_size: 16384
+        lwip_n_rx_descriptors: 512
+        lwip_memp_n_pbuf: 1024
+        lwip_mem_size: 524288
+    xiltimer:
+        XILTIMER_en_interval_timer: ON
 
 depends:
     emaclite:
