--- a/lib/sw_services/xilplmi/data/xilplmi.yaml
+++ b/lib/sw_services/xilplmi/data/xilplmi.yaml
@@ -7,6 +7,8 @@ title: Bindings for xilplmi library
 maintainers:
   - Appana Durga Kedareswara Rao <appanad.durga.rao@xilinx.com>
 
+description: Xilinx Versal Platform Loader and Manager Interface Library.
+
 supported_processors:
   - psv_pmc
 
