scripts: linker_files: Remove memory.ld and include cmake met-data
Signed-off-by: Appana Durga Kedareswara rao <appana.durga.kedareswara.rao@amd.com>

--- a/scripts/linker_files/lscript_a53.ld.in
+++ b/scripts/linker_files/lscript_a53.ld.in
@@ -10,7 +10,7 @@ _EL0_STACK_SIZE = DEFINED(_EL0_STACK_SIZE) ? _EL0_STACK_SIZE : 1024;
 _EL1_STACK_SIZE = DEFINED(_EL1_STACK_SIZE) ? _EL1_STACK_SIZE : 2048;
 _EL2_STACK_SIZE = DEFINED(_EL2_STACK_SIZE) ? _EL2_STACK_SIZE : 1024;
 
-INCLUDE memory.ld
+@MEMORY_SECTION@
 
 /* Specify the default entry point to the program */
 
