--- a/scripts/linker_files/lscript_a9.ld.in
+++ b/scripts/linker_files/lscript_a9.ld.in
@@ -12,7 +12,7 @@ _IRQ_STACK_SIZE = DEFINED(_IRQ_STACK_SIZE) ? _IRQ_STACK_SIZE : 1024;
 _FIQ_STACK_SIZE = DEFINED(_FIQ_STACK_SIZE) ? _FIQ_STACK_SIZE : 1024;
 _UNDEF_STACK_SIZE = DEFINED(_UNDEF_STACK_SIZE) ? _UNDEF_STACK_SIZE : 1024;
 
-INCLUDE memory.ld
+@MEMORY_SECTION@
 
 /* Specify the default entry point to the program */
 
