--- a/scripts/linker_files/lscript_mb.ld.in
+++ b/scripts/linker_files/lscript_mb.ld.in
@@ -6,7 +6,7 @@
 _STACK_SIZE = DEFINED(_STACK_SIZE) ? _STACK_SIZE : 0xA000;
 _HEAP_SIZE = DEFINED(_HEAP_SIZE) ? _HEAP_SIZE : 0xA000;
 
-INCLUDE memory.ld
+@MEMORY_SECTION@
 
 /* Specify the default entry point to the program */
 
