--- a/lib/sw_apps/memory_tests/src/CMakeLists.txt
+++ b/lib/sw_apps/memory_tests/src/CMakeLists.txt
@@ -1,6 +1,15 @@
 # Copyright (c) 2021 Xilinx, Inc.  All rights reserved.
 # SPDX-License-Identifier: MIT
 cmake_minimum_required(VERSION 3.14.7)
+####    START OF USER SETTINGS    ####
+# Below settings can be customized
+set(USER_CC_FLAGS
+	""
+)
+set(USER_LINKER_FLAGS
+	""
+)
+####    END OF USER SETTINGS    ####
 include(${CMAKE_CURRENT_SOURCE_DIR}/Memory_testsExample.cmake)
 project(memory_test)
 
@@ -49,6 +58,7 @@ configure_file(${CMAKE_CURRENT_SOURCE_DIR}/memory_config_g.c.in ${CMAKE_CURRENT_
 set(SOURCES memorytest.c;platform.c;memory_config_g.c)
 set(CMAKE_INFILE_PATH "${CMAKE_SOURCE_DIR}/linker_files/")
 linker_gen(${CMAKE_INFILE_PATH})
-
+string(APPEND CMAKE_C_FLAGS ${USER_CC_FLAGS})
+string(APPEND CMAKE_C_LINK_FLAGS ${USER_LINKER_FLAGS})
 add_executable(memory_test.elf ${SOURCES})
 target_link_libraries(memory_test.elf -Wl,--gc-sections -T\"${CMAKE_SOURCE_DIR}/lscript.ld\" -L\"${CMAKE_SOURCE_DIR}/\" -Wl,--start-group ${_deps} -Wl,--end-group)
