--- a/lib/sw_apps/peripheral_tests/src/CMakeLists.txt
+++ b/lib/sw_apps/peripheral_tests/src/CMakeLists.txt
@@ -1,6 +1,15 @@
 # Copyright (c) 2021 Xilinx, Inc.  All rights reserved.
 # SPDX-License-Identifier: MIT
 cmake_minimum_required(VERSION 3.14.7)
+####    START OF USER SETTINGS    ####
+# Below settings can be customized
+set(USER_CC_FLAGS
+	""
+)
+set(USER_LINKER_FLAGS
+	""
+)
+####    END OF USER SETTINGS    ####
 include(${CMAKE_CURRENT_SOURCE_DIR}/Peripheral_testsExample.cmake)
 project(executable)
 
@@ -15,5 +24,7 @@ collector_list (_deps PROJECT_LIB_DEPS)
 
 file(GLOB SOURCES "*.c")
 linker_gen("${CMAKE_SOURCE_DIR}/linker_files/")
+string(APPEND CMAKE_C_FLAGS ${USER_CC_FLAGS})
+string(APPEND CMAKE_C_LINK_FLAGS ${USER_LINKER_FLAGS})
 add_executable(executable.elf ${SOURCES})
 target_link_libraries(executable.elf -Wl,--gc-sections -T\"${CMAKE_SOURCE_DIR}/lscript.ld\" -L\"${CMAKE_SOURCE_DIR}/\" -Wl,--start-group ${_deps} -Wl,--end-group)
