esw: Move uart config selection to standalone bsp
Signed-off-by: Appana Durga Kedareswara rao <appana.durga.kedareswara.rao@amd.com>

--- a/lib/bsp/standalone/src/bspconfig.h.in
+++ b/lib/bsp/standalone/src/bspconfig.h.in
@@ -19,5 +19,11 @@
 #cmakedefine PLATFORM_MB @PLATFORM_MB@
 #define SDT
 #define XPAR_CPU_ID 0
+#cmakedefine XPAR_STDIN_IS_UARTLITE @XPAR_STDIN_IS_UARTLITE@
+#cmakedefine XPAR_STDIN_IS_UARTNS550 @XPAR_STDIN_IS_UARTNS550@
+#cmakedefine XPAR_STDIN_IS_UARTPS @XPAR_STDIN_IS_UARTPS@
+#cmakedefine XPAR_STDIN_IS_UARTPSV @XPAR_STDIN_IS_UARTPSV@
+#cmakedefine STDIN_BASEADDRESS @STDIN_BASEADDRESS@
+#cmakedefine STDOUT_BASEADDRESS @STDOUT_BASEADDRESS@
 
 #endif /* BSPCONFIG_H */
