esw: Per bsp top level CMakeLists.txt changes
Signed-off-by: Appana Durga Kedareswara rao <appana.durga.kedareswara.rao@amd.com>

--- a/XilinxProcessorIPLib/drivers/CMakeLists.txt
+++ b/XilinxProcessorIPLib/drivers/CMakeLists.txt
@@ -4,15 +4,15 @@ project(libxil)
 if (${NON_YOCTO})
 find_package(common)
 include_directories(${CMAKE_BINARY_DIR}/include)
-set(DRVLIST_DIR "${CMAKE_SOURCE_DIR}")
+set(DRVLIST_DIR "${CMAKE_CURRENT_SOURCE_DIR}")
 find_package(DRVLIST)
 FOREACH(DRIVER ${DRIVER_LIST})
     STRING(REGEX REPLACE "-" "_" DRIVER ${DRIVER})
     add_subdirectory(${DRIVER}/src)
-    list(APPEND OBJS ${CMAKE_BINARY_DIR}/${DRIVER}/src/CMakeFiles/${DRIVER}.dir/*.obj)
+    list(APPEND OBJS ${CMAKE_BINARY_DIR}/libsrc/${DRIVER}/src/CMakeFiles/${DRIVER}.dir/*.obj)
     subdirlist(SUBDIRS ${CMAKE_SOURCE_DIR}/${DRIVER}/src)
     foreach(subdir ${SUBDIRS})
-	    list(APPEND OBJS ${CMAKE_BINARY_DIR}/${DRIVER}/src/CMakeFiles/${DRIVER}.dir/${subdir}/*.obj)
+	    list(APPEND OBJS ${CMAKE_BINARY_DIR}/libsrc/${DRIVER}/src/CMakeFiles/${DRIVER}.dir/${subdir}/*.obj)
     endforeach()
 ENDFOREACH()
 
