--- a/XilinxProcessorIPLib/drivers/common/src/CMakeLists.txt
+++ b/XilinxProcessorIPLib/drivers/common/src/CMakeLists.txt
@@ -5,8 +5,8 @@ project(common)
 
 find_package(common)
 if (${NON_YOCTO})
-set(INTC_DIR "${CMAKE_SOURCE_DIR}/intc/src/")
-set(SCUGIC_DIR "${CMAKE_SOURCE_DIR}/scugic/src/")
+set(INTC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../../intc/src/")
+set(SCUGIC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../../scugic/src/")
 else()
 set(INTC_DIR "${CMAKE_CURRENT_SOURCE_DIR}")
 set(SCUGIC_DIR "${CMAKE_CURRENT_SOURCE_DIR}")
